--- a/Ejemplos/EjemploBucles/test.html
+++ b/Ejemplos/EjemploBucles/test.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="hello">Hello JS!</h1>
+    <h1 id="hola">Hola JS!</h1>
 
     <script src="bucles.js"></script>
 </body>
