Dos pokemon a la vez

--- a/EjemplosProyectos/ProyectoPokedexInternet/index.html
+++ b/EjemplosProyectos/ProyectoPokedexInternet/index.html
@@ -22,6 +22,15 @@
         <div data-poke-types class="poke-types"></div>
         <div data-poke-stats class="poke-stats"></div>
     </div>
-    searchPokemon(event)
+    <br>
+    <div data-poke-card2 class="poke-card">
+        <div data-poke-name2>Pokedex2</div>
+        <div data-poke-img-container2 class="img-container">
+            <img data-poke-img2 class="poke-img" src="./poke-shadow.png"/>
+        </div>
+        <div data-poke-id2></div>
+        <div data-poke-types2 class="poke-types"></div>
+        <div data-poke-stats2 class="poke-stats"></div>
+    </div>
 </body>
 </html>
